--- a/argocd_manifests_conf_policy.tls.yml
+++ b/argocd_manifests_conf_policy.tls.yml
@@ -48,6 +48,12 @@ spec:
           operator: In
           values:
           - "managed-cluster"
+  tolerations:
+  - key: cluster.open-cluster-management.io/unreachable
+    operator: Exists
+  - key: cluster.open-cluster-management.io/unavailable
+    operator: Exists
+          
 
 ---
 
