--- a/gitops-manifests/clusterrolebinding.yaml
+++ b/gitops-manifests/clusterrolebinding.yaml
@@ -2,6 +2,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: cluster-admin-gitops
+  annotations:
+    apps.open-cluster-management.io/do-not-delete: 'true'
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
