--- a/appsub/ansible-automation-platform/gitops-manifests/eda.yaml
+++ b/appsub/ansible-automation-platform/gitops-manifests/eda.yaml
@@ -3,6 +3,8 @@ kind: EDA
 metadata:
   name: event-driven-ansible
   namespace: aap
+  annotations:
+    apps.open-cluster-management.io/do-not-delete: 'true'
 spec:
   route_tls_termination_mechanism: Edge
   ingress_type: Route
